--- a/CSS/medium-devices.css
+++ b/CSS/medium-devices.css
@@ -49,6 +49,11 @@
     padding: 10px;
   }
 
+  .sing a:hover {
+    background-color: transparent;
+    color: #00a0eb;
+  }
+
   .form {
     height: 60px;
     width: 100%;
@@ -147,6 +152,10 @@
     text-decoration: none;
     font-size: 17px;
     border-radius: 5px;
+  }
+
+  .light-house a:hover {
+    background-color: #103a79;
   }
 
   .display {
@@ -335,6 +344,10 @@
     cursor: pointer;
   }
 
+  .explore a:hover {
+    background-color: #103a79;
+  }
+
   nav {
     width: 100%;
     text-align: center;
@@ -358,6 +371,10 @@
     width: 300px;
     height: 150px;
     text-align: center;
+    background-color: whitesmoke;
+  }
+
+  nav .card-icon:hover {
     background-color: whitesmoke;
   }
 
@@ -388,6 +405,10 @@
 
   .agent-picture input[type="image"] {
     width: 80%;
+  }
+
+  .agent-picture input[type="image"]:hover {
+    width: 70%;
   }
 
   .our-agents .agent-picture {
